resolve PR comments

--- a/view/frontend/web/template/payment/cm_payments.html
+++ b/view/frontend/web/template/payment/cm_payments.html
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright © 2021 cm.com. All rights reserved.
+  ~ Copyright © CM.com. All rights reserved.
   ~ See LICENSE.txt for license details.
   -->
 
