--- a/view/frontend/web/template/payment/ideal.html
+++ b/view/frontend/web/template/payment/ideal.html
@@ -19,8 +19,11 @@
 
         <!-- ko if: getIssuers() -->
         <div class="field-select-billing">
-            <strong><span data-bind="i18n: 'Select Bank'"></span></strong>
-            <select data-bind="options: getIssuers(), optionsText: 'name', optionsValue: 'id', value: selectedIssuer"></select>
+            <form class="form" data-bind="attr: {'id': getCode() + '-form'}">
+                <select data-bind="options: getIssuers(), optionsValue: 'id', optionsText: 'name',
+                    optionsCaption: '-- Please, select Bank... --', value: selectedIssuer" data-validate="{required:true}">
+                </select>
+            </form>
         </div>
         <br/>
         <!--/ko-->
