--- a/view/frontend/web/template/payment/ideal.html
+++ b/view/frontend/web/template/payment/ideal.html
@@ -1,3 +1,8 @@
+<!--
+  ~ Copyright © CM.com. All rights reserved.
+  ~ See LICENSE.txt for license details.
+  -->
+
 <div class="payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice">
         <input type="radio"
@@ -20,7 +25,7 @@
         <!-- ko if: getIssuers() -->
         <div class="field-select-billing">
             <form class="form" data-bind="attr: {'id': getCode() + '-form'}">
-                <select data-bind="options: getIssuers(), optionsValue: 'id', optionsText: 'name',
+                <select data-bind="options: getIssuers(), optionsValue: 'code', optionsText: 'title',
                     optionsCaption: '-- Please, select Bank... --', value: selectedIssuer" data-validate="{required:true}">
                 </select>
             </form>
