--- a/view/adminhtml/web/css/styles.less
+++ b/view/adminhtml/web/css/styles.less
@@ -20,14 +20,17 @@
         height: 100px;
         width: auto;
         padding-left: 20rem;
-        display:inline-block;
+        display: inline-block;
         vertical-align: middle;
+        margin: 0 20px 0 0px;
     }
+
     .cm_payments-text {
         display: inline-block;
         vertical-align: middle;
         width: 50%;
     }
+
     .button-container {
         float: right;
     }
