--- a/view/frontend/web/template/payment/ideal.html
+++ b/view/frontend/web/template/payment/ideal.html
@@ -26,7 +26,7 @@
         <div class="field-select-billing">
             <form class="form" data-bind="attr: {'id': getCode() + '-form'}">
                 <select data-bind="options: getIssuers(), optionsValue: 'code', optionsText: 'title',
-                    optionsCaption: '-- Please, select Bank... --', value: selectedIssuer" data-validate="{required:true}">
+                    optionsCaption: '-- Please select --', value: selectedIssuer" data-validate="{required:true}">
                 </select>
             </form>
         </div>
