CMP-40 - Added support of checking of the latest version of extension

--- a/view/adminhtml/templates/system/config/button/check_latest_version.phtml
+++ b/view/adminhtml/templates/system/config/button/check_latest_version.phtml
@@ -12,7 +12,7 @@ use Magento\Framework\Escaper;
  * @var Escaper $escaper
  */
 ?>
-<div class="cmpayments-result-version-wrapper"
+<div class="cmpayments-result-version-wrapper" data-mage-init='{"CM_Payments/js/system/version": {}}'
      data-cmpayments-endpoint-url="<?= $escaper->escapeUrl($block->getLatestVersionCheckUrl()) ?>">
     <span><?= $escaper->escapeHtml($block->getCurrentVersion()); ?></span>
     <?= $block->getButtonHtml() ?>
