--- a/view/adminhtml/web/css/styles.less
+++ b/view/adminhtml/web/css/styles.less
@@ -34,3 +34,18 @@
         float: right;
     }
 }
+
+#cmpayments_button_version {
+    background: transparent;
+    padding-left: 0.85rem;
+    margin: -0.8rem 0 -1rem 2rem;
+    white-space: nowrap;
+    color: #948f8b;
+    border: 1px solid #b4b4b4;
+    transition: 0.3s color, 0.3s border;
+}
+
+.cmpayments-button-disabled {
+    position: absolute;
+    top: 0;
+}
