CMP-42 - Added Test Api Connection functionality

--- a/view/adminhtml/web/css/styles.less
+++ b/view/adminhtml/web/css/styles.less
@@ -34,3 +34,13 @@
         float: right;
     }
 }
+
+.cmpayments-check-api-connection-result {
+    margin-top: 10px;
+    .cmpayments-api-connection-success {
+        color: darkgreen;
+    }
+    .cmpayments-api-connection-error {
+        color: red;
+    }
+}
