--- a/view/adminhtml/web/css/styles.less
+++ b/view/adminhtml/web/css/styles.less
@@ -49,3 +49,13 @@
     position: absolute;
     top: 0;
 }
+
+.cmpayments-result-version {
+    margin-top: 10px;
+    .cmpayments-version-is-latest {
+        color: darkgreen;
+    }
+    .cmpayments-version-is-not-latest {
+        color: red;
+    }
+}
