--- a/view/frontend/web/template/payment/elv.html
+++ b/view/frontend/web/template/payment/elv.html
@@ -25,13 +25,13 @@
         <div class="payment-method-iban">
             <form class="form" data-bind="attr: {'id': getCode() + '-form'}">
                 <div class="field field-from">
-                    <label data-bind="attr: {for: elv-iban}" class="label">
+                    <label data-bind="attr: {for: 'elv-iban'}" class="label">
                         <span data-bind="i18n: 'IBAN:'"></span>
                     </label>
                     <div class="control">
                         <input type="text"
                                class="input-text"
-                               data-bind="value: iban, attr: {id: elv-iban}" data-validate="{required:true}">
+                               data-bind="value: iban, attr: {id: 'elv-iban'}" data-validate="{required:true}">
                     </div>
                 </div>
             </form>
