CMP-112 - Improving of testing of API connection

--- a/view/adminhtml/templates/system/config/button/check_api_connection.phtml
+++ b/view/adminhtml/templates/system/config/button/check_api_connection.phtml
@@ -26,7 +26,8 @@
                     "component": "CM_Payments/js/system/action/check-api-connection",
                     "config": {
                         "checkApiConnectionUrl": "<?= $escaper->escapeUrl($block->getApiConnectionCheckUrl()) ?>",
-                        "resultContainerSelector": ".cmpayments-check-api-connection-result"
+                        "resultContainerSelector": ".cmpayments-check-api-connection-result",
+                        "modeContainerSelector": "#cm_payments_general_api_details_mode"
                     }
                 }
             }
