--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -17,6 +17,10 @@
                     }
                 }
             }
+
+            > legend {
+                padding: 0 0 10px 0;
+            }
         }
 
         .cm-payments-ccard {
@@ -72,6 +76,11 @@
                 .input-mi {
                     background-image: url(../CM_Payments/images/creditcard/mi.svg) !important;
                 }
+
+                // V-Pay Credit Card Type
+                .input-vp {
+                    background-image: url(../CM_Payments/images/creditcard/vp.svg) !important;
+                }
             }
 
             .month {
@@ -83,7 +92,7 @@
             .year {
                 padding-left: 5px;
                 .select {
-                    width: 105px;
+                    width: 115px;
                 }
             }
 
