--- a/view/frontend/web/template/payment/maestro.html
+++ b/view/frontend/web/template/payment/maestro.html
@@ -21,7 +21,6 @@
         <!-- ko template: getTemplate() --><!-- /ko -->
         <!--/ko-->
 
-        <!-- ko if: isDirect() -->
         <form class="form" data-bind="attr: {'id': getCode() + '-form'}">
             <fieldset data-bind="attr: {class: 'fieldset payment items cm-payments-ccard ' + getCode(), id: 'payment_form_' + getCode()}">
                 <legend>
@@ -31,19 +30,6 @@
                 </legend>
                 <div class="field type">
                     <div class="control">
-                        <ul class="credit-card-types">
-                            <!-- ko foreach: {data: getCreditCardAllowedTypesIcons(), as: 'item'} -->
-                            <li class="item">
-                                <img data-bind="attr: {
-                                    'src': item.url,
-                                    'alt': item.title,
-                                    'title': item.title,
-                                    'width': item.width,
-                                    'height': item.height
-                                    }">
-                            </li>
-                            <!--/ko-->
-                        </ul>
                         <input type="hidden"
                                name="payment[cc_type]"
                                class="input-text"
@@ -85,7 +71,7 @@
                                     title: $t('Credit Card Number'),
                                     placeholder: $t('Enter Card Number...'),
                                     'data-container': getCode() + '-cc-number',
-                                    'data-validate': JSON.stringify({'required-number':true, 'validate-allowed-card-type':getCreditCardAllowedTypes()})},
+                                    'data-validate': JSON.stringify({'required-number':true, 'validate-allowed-card-type':getCreditCardAllowedTypes())},
                                     value: cardNumber,
                                     valueUpdate: 'keyup' "/>
                     </div>
@@ -154,7 +140,6 @@
                 </div>
             </fieldset>
         </form>
-        <!--/ko-->
 
         <div class="payment-method-billing-address">
             <!-- ko foreach: $parent.getRegion(getBillingAddressFormName()) -->
