CMP-123 - Bug fixing

--- a/view/frontend/web/template/payment/maestro.html
+++ b/view/frontend/web/template/payment/maestro.html
@@ -71,7 +71,7 @@
                                     title: $t('Credit Card Number'),
                                     placeholder: $t('Enter Card Number...'),
                                     'data-container': getCode() + '-cc-number',
-                                    'data-validate': JSON.stringify({'required-number':true, 'validate-allowed-card-type':getCreditCardAllowedTypes())},
+                                    'data-validate': JSON.stringify({'required-number':true, 'validate-allowed-card-type':getCreditCardAllowedTypes()})},
                                     value: cardNumber,
                                     valueUpdate: 'keyup' "/>
                     </div>
