--- a/view/frontend/web/template/payment/creditcard.html
+++ b/view/frontend/web/template/payment/creditcard.html
@@ -182,5 +182,8 @@
                 </button>
             </div>
         </div>
+        <div data-bind="attr: {id: 'cc-challenge-form-popup'}, visible: false">
+            <div data-bind="attr: {class: 'cc-challenge-form-popup-content'}"></div>
+        </div>
     </div>
 </div>
