--- a/view/frontend/web/template/payment/creditcard.html
+++ b/view/frontend/web/template/payment/creditcard.html
@@ -173,7 +173,7 @@
                         data-role="review-save"
                         type="submit"
                         data-bind="
-                        click: placeOrder,
+                        click: (isDirect() ? placeOrderDirect : placeOrder),
                         attr: {title: $t('Place Order')},
                         css: {disabled: !isPlaceOrderActionAllowed()},
                         enable: (getCode() == isChecked())"
